# dook

./: .readthedocs.yaml  LICENSE  README.md  create_docs.sh  meson.build  run.sh
.github/workflows/: build.yaml
docs/: .gitignore  Doxyfile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/development/: basics.rst  development.rst  initial.rst  services.rst
docs/source/internals/: entities.rst  manifest_entities.rst  modules.rst  services.rst  utility_entities.rst
resources/: credits.txt  resources.json
src/: main.cpp  meson.build
src/entities/: Camera.cpp  Character.cpp  Level.cpp  Object.cpp  Rect.cpp  Texture.cpp  meson.build
src/entities/include/: AIType.hpp  Audio.hpp  Camera.hpp  Character.hpp  CharacterStates.hpp  CharacterStats.hpp  Command.hpp  Entity.hpp  EntityBundle.hpp  EntityType.hpp  Level.hpp  NullAudio.hpp  NullTexture.hpp  Object.hpp  Position.hpp  Rect.hpp  SourceInfo.hpp  State.hpp  Texture.hpp  Vector.hpp
src/game/: Game.cpp  meson.build
src/game/include/: Game.hpp
src/jparser/: JSONParserService.cpp  meson.build
src/jparser/include/: JSONParserService.hpp
src/jparser/schemas/: resources.schema.json
src/sdl/: SDLGraphicsService.cpp  SDLInputService.cpp  SDLTexture.cpp  meson.build
src/sdl/include/: SDLGraphicsService.hpp  SDLInputService.hpp  SDLTexture.hpp
src/services/: CommonLoggerService.cpp  GraphicsService.cpp  LevelService.cpp  NullInputService.cpp  NullLevelService.cpp  NullParserService.cpp  ParserService.cpp  ServiceLocator.cpp  meson.build
src/services/include/: CommonLoggerService.hpp  GraphicsService.hpp  InputService.hpp  LevelService.hpp  LoggerService.hpp  NullGraphicsService.hpp  NullInputService.hpp  NullLevelService.hpp  NullLoggerService.hpp  NullParserService.hpp  ParserService.hpp  ServiceLocator.hpp
subprojects/: .gitignore
